Fix comparison in property coverage checks